--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "checkjs",
-  "version": "1.3.0-pre.0",
-  "description": "Yet another value-validator in JavaScript ... Or is it?",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/parzh/check.git"
-  },
-  "keywords": [
-    "check",
-    "checkjs"
-  ],
-  "author": "Dmitry Parzhitsky <parzhitsky@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/parzh/check/issues"
-  },
-  "homepage": "https://github.com/parzh/check#readme"
+	"name": "cheek",
+	"version": "1.3.0-pre.0",
+	"description": "Cheeky check",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/parzh/cheek.git"
+	},
+	"keywords": [
+		"check",
+		"checkjs",
+		"cheeky"
+	],
+	"author": "Dmitry Parzhitsky <parzhitsky@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/parzh/cheek/issues"
+	},
+	"homepage": "https://github.com/parzh/cheek#readme"
 }
