--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheek",
-  "version": "1.3.1-pre.0",
+  "version": "2.0.0-beta.0",
   "description": "Cheeky check",
   "main": "index.js",
   "scripts": {
