--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cheek",
   "version": "2.1.0-beta.0",
-  "description": "Cheeky check",
+  "description": "Yet another value-validator in JavaScript ... Or is it?",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
