--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cheek",
-  "version": "3.1.0-0",
+  "name": "check",
+  "version": "3.2.0-0",
   "description": "Yet another value-validator in JavaScript ... Or is it?",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/parzh/cheek.git"
+    "url": "git+https://github.com/parzh/check.git"
   },
   "keywords": [
     "check",
@@ -19,7 +19,7 @@
   "author": "Dmitry Parzhitsky <parzhitsky@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/parzh/cheek/issues"
+    "url": "https://github.com/parzh/check/issues"
   },
-  "homepage": "https://github.com/parzh/cheek#readme"
+  "homepage": "https://github.com/parzh/check#readme"
 }
