--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "check",
-  "version": "3.3.0",
+  "name": "checkjs",
+  "version": "3.2.0-0",
   "description": "Yet another value-validator in JavaScript ... Or is it?",
   "main": "index.js",
   "scripts": {
